fix: correct z-index to bring to top

--- a/src/components/scroll-to-top/scroll-to-top_style.scss
+++ b/src/components/scroll-to-top/scroll-to-top_style.scss
@@ -10,6 +10,7 @@
     bottom: 12dvh;
     position: fixed;
     right: 4%;
+    z-index: 110;
 
     button {
         @include scroll-to-top_Transition;
